ci: adiciona self-hosted runner (#38)
* ci: adiciona setl-hosted runner

* ci: ajusta workflow

* ci: remove temporariamente os testes

* ci: remove --no-restore (publish)

* chore: atualiza modelo de tabela global

* ci: testa configuração global table-driven design

* ci: adiciona símbolos de compilação

* build: adiciona novas configurações

* ci: ajusta workflow para testes

* specs: ajusta path do comprovante de ponto

* build: remove warnings de nullable

* build: altera nome das configurações

* build: corrige nome da configuração

* Revert "build: remove warnings de nullable"

This reverts commit 1a7e89c4b651c56e191b758b5a13c1e59bef3b98.

* ci: remove instalação de dependências a parte

* specs: ajusta path do comprovante de ponto

* ci: altera ordem das etapas

* ci: ajusta workflow

* ci: adiciona dotnet-quality: 'validated'

* ci: downgrade actions/checkout to v2

---------

Co-authored-by: Marcelo Dias <mardsystems@hotmail.com>

--- a/src/MeuPonto.WinForms/MeuPonto.WinForms.csproj
+++ b/src/MeuPonto.WinForms/MeuPonto.WinForms.csproj
@@ -32,6 +32,46 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug_Web_Cosmos|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug_Web_Cosmos\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release_Web_Cosmos|AnyCPU'">
+    <OutputPath>bin\Release_Web_Cosmos\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug_Web_Sqlite|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug_Web_Sqlite\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release_Web_Sqlite|AnyCPU'">
+    <OutputPath>bin\Release_Web_Sqlite\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
