--- a/.github/workflows/main_meuponto_web_cosmos.yml
+++ b/.github/workflows/main_meuponto_web_cosmos.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: MeuPonto.Web - Build and deploy ASP.Net Core app to Azure Web App
+name: MeuPonto.Web (Cosmos)
 
 on:
   pull_request:
@@ -12,21 +12,26 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up .NET Core
+      - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.0.x'
           include-prerelease: false
 
-      - name: Build with dotnet
-        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release
+      - name: Test Specs (Web)
+        run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration Release --verbosity normal
 
-      - name: dotnet publish
-        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: Test Web
+        run: dotnet test tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj --configuration Release --verbosity normal
+
+      - name: Build Web
+        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release_Web_Cosmos
+
+      - name: Publish Web
+        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release_Web_Cosmos -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -34,7 +39,19 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
+  deploy-staging:
+    runs-on: self-hosted
+    needs: build
+    environment:
+      name: 'Staging'
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: .net-app
+
+  deploy-production:
     runs-on: windows-latest
     needs: build
     environment:
