--- a/specs/MeuPonto.Specs.Desktop/MeuPonto.Specs.Desktop.csproj
+++ b/specs/MeuPonto.Specs.Desktop/MeuPonto.Specs.Desktop.csproj
@@ -4,6 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>MeuPonto</RootNamespace>
+    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="specflow.actions.json" />
