--- a/src/MeuPonto.Desktop/MeuPonto.Desktop.csproj
+++ b/src/MeuPonto.Desktop/MeuPonto.Desktop.csproj
@@ -9,6 +9,7 @@
     </StartupObject>
     <UserSecretsId>93db4e64-4e46-44ae-be05-3f39d4cbdc25</UserSecretsId>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="appsettings.json" />
