--- a/src/MeuPonto.Web/MeuPonto.Web.csproj
+++ b/src/MeuPonto.Web/MeuPonto.Web.csproj
@@ -7,6 +7,25 @@
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <RootNamespace>MeuPonto</RootNamespace>
     <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
+    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Sqlite|AnyCPU'">
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Cosmos|AnyCPU'">
+    <DefineConstants>$(DefineConstants);INFRA_COSMOS</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_Web_Sqlite|AnyCPU'">
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_Web_Cosmos|AnyCPU'">
+    <DefineConstants>$(DefineConstants);INFRA_COSMOS</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" NoWarn="NU1605" />
@@ -27,7 +46,12 @@
     <EditorConfigFiles Remove="C:\github\MeuPonto\.net\src\MeuPonto.Web\.editorconfig" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Cosmos\MeuPonto.EntityFrameworkCore.Cosmos.csproj" />
+    <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Sqlite\MeuPonto.EntityFrameworkCore.Sqlite.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Sqlite\MeuPonto.EntityFrameworkCore.Sqlite.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Sqlite|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Cosmos\MeuPonto.EntityFrameworkCore.Cosmos.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Cosmos|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Sqlite\MeuPonto.EntityFrameworkCore.Sqlite.csproj" Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Sqlite\MeuPonto.EntityFrameworkCore.Sqlite.csproj" Condition="'$(Configuration)|$(Platform)'=='Release_Web_Sqlite|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Cosmos\MeuPonto.EntityFrameworkCore.Cosmos.csproj" Condition="'$(Configuration)|$(Platform)'=='Release_Web_Cosmos|AnyCPU'" />
     <ProjectReference Include="..\MeuPonto.Web_App\MeuPonto.Web_App.csproj">
       <Aliases>
       </Aliases>
