--- a/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
+++ b/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
@@ -4,25 +4,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>MeuPonto</RootNamespace>
-    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Cosmos|AnyCPU'">
-    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_Web_Cosmos|AnyCPU'">
-    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Sqlite|AnyCPU'">
-    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_Web_Sqlite|AnyCPU'">
-    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
+    <Configurations>Debug;Release;Debug_Cosmos;Release_Cosmos;Debug_Sqlite;Release_Sqlite;Debug_SqlServer;Release_SqlServer</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="specflow.json" />
@@ -47,12 +29,7 @@
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Cosmos|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release_Web_Cosmos|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Sqlite|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release_Web_Sqlite|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Modules\Pontos\Comprovantes\BackupComprovantes.feature.cs">
