--- a/src/MeuPonto.EntityFrameworkCore.Cosmos/MeuPonto.EntityFrameworkCore.Cosmos.csproj
+++ b/src/MeuPonto.EntityFrameworkCore.Cosmos/MeuPonto.EntityFrameworkCore.Cosmos.csproj
@@ -4,7 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>MeuPonto</RootNamespace>
-    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
+    <Configurations>Debug;Release;Debug_Cosmos;Release_Cosmos;Debug_Sqlite;Release_Sqlite;Debug_SqlServer;Release_SqlServer</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\specs\MeuPonto.ConceptualModel\MeuPonto.ConceptualModel.csproj" />
@@ -13,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="7.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
   </ItemGroup>
 </Project>
