--- a/src/System.Xaml.Extensions/System.Xaml.Extensions.csproj
+++ b/src/System.Xaml.Extensions/System.Xaml.Extensions.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <RootNamespace>System</RootNamespace>
-    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
+    <Configurations>Debug;Release;Debug_Cosmos;Release_Cosmos;Debug_Sqlite;Release_Sqlite;Debug_SqlServer;Release_SqlServer</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\System.Extensions\System.Extensions.csproj" />
